--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <link rel= "stylesheet" type= "text/css" href= "Homo_Antecessor_CSS_.css" />
+        <title>Early Hominin Species</title>
+    </head>
+    <body>
+        <h1>Homo Antecessor</h1>
+        <h2>Stone Tool Use</h2>
+            <div data-importance = "high">
+            <p>The earliest stone tools are catergorized as "Oldowan." They have been connected to Homo Antecessor (who are the earliest hominin species discovered in Europe). They were capable of simple stone tool production.</p>
+        <h3>Hunting</h3>
+             <div data-importance = "high">
+            <p>Evidence for hunting has been found from percussive marks on animal bones.</p>
+        <h4>Evidence of Burials</h4>
+              <div data-importance = "high">
+            <p>There is no evidence of proper burials within Homo Antecessor. It is thought that these hominins practiced canabilism.</p>
+        <img src= "https://media.australian.museum/media/dd/images/ATD_6-15_111111.581dbfb.width-1200.7838809.jpg" />    
+        </div>
+            </div>
+            </div>
+    </body>
+</html>
 
